--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <div id="main">
         <div id="back"></div>
-        <div id="top"></div>
+        <div id="top">
+            <div id="workingarea">
+                <div id="nav">
+                    
+                </div>
+            </div>
+        </div>
     </div>
 
 
