--- a/index.html
+++ b/index.html
@@ -12,7 +12,50 @@
         <div id="top">
             <div id="workingarea">
                 <div id="nav">
-                    
+                   <div id="nav1">
+                    <img src="./images/raybanlogo.png" alt="">
+                    <a href="#">Products</a>
+                    <a href="#">About</a>
+                   </div>
+                   <div id="nav2">
+                        <a href="#">Looks</a>
+                        <a href="#">Pricing</a>
+                   </div>
+                </div>
+                <div id="hero">
+                    <div id="hleft">
+                        <div class="elem">
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                        </div>
+                        <div class="elem">
+                            <h1>Gives Zero</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                        </div>
+                        <div class="elem">
+                            <h1>Funks.</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                            <h1>David Chang</h1>
+                        </div> 
+                        <button>Explore Now</button>
+                    </div>
+                    <div id="hright">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <div id="image">
+                          
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur minima distinctio porro accusamus quaerat cupiditate accusantium corporis reiciendis aliquid animi obcaecati saepe adipisci non cumque minus reprehenderit, vero quos ad alias excepturi ex?</p>
+
+                          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo reiciendis dolorem architecto nemo expedita dicta doloremque nesciunt aliquid natus consequatur. Sequi, reprehenderit adipisci?</p>
+                    </div>
                 </div>
             </div>
         </div>
