--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ray Ban</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
 </head>
 <body>
     <div id="main">
-        <div id="back"></div>
+        <div id="back">
+            <img src="./images/IMG_7564.JPG" alt="">
+            <img src="./images/IMG_7565.JPG" alt="">
+            <img src="./images/IMG_7566.JPG" alt="">
+            <img src="./images/IMG_7567.JPG" alt="">
+            <img src="./images/IMG_7568.JPG" alt="">
+        </div>
+
         <div id="top">
             <div id="workingarea">
                 <div id="nav">
@@ -61,7 +69,19 @@
         </div>
     </div>
 
+<!--  Gsap is needed for Basic Effects -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
+<!-- Scroll Trigger is needed for Scroll Effects -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+<!-- Three.js is needed for 3d Effects -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+
+<!-- ControlKit is needed for Debug Panel -->
+<script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+
+    <script  type="text/javascript"  src="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
