--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <div id="hero">
                     <div id="hleft">
                         <div class="elem">
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
+                            <h1>Vrutansh</h1>
+                            <h1>Vrutansh</h1>
+                            <h1>Vrutansh</h1>
+                            <h1>Vrutansh</h1>
+                            <h1>Vrutansh</h1>
                         </div>
                         <div class="elem">
                             <h1>Gives Zero</h1>
@@ -70,16 +70,16 @@
         </div>
     </div>
 
-<!--  Gsap is needed for Basic Effects -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
-<!-- Scroll Trigger is needed for Scroll Effects -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
-<!-- Three.js is needed for 3d Effects -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
 
-<!-- ControlKit is needed for Debug Panel -->
+
 <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
 
     <script  type="text/javascript"  src="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.js"></script>
