--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                         </div>
                         <div class="elem">
                             <h1>Gives Zero</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
+                            <h1>Takes Zero</h1>
+                            <h1>Radiates</h1>
+                            <h1>has a </h1>
+                            <h1>Leaves</h1>
                         </div>
                         <div class="elem">
                             <h1>Funks.</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
-                            <h1>David Chang</h1>
+                            <h1>Judgement</h1>
+                            <h1>Sigma Energy</h1>
+                            <h1>badass narrative</h1>
+                            <h1>Jaw Dropped !!</h1>
                         </div> 
                         <button>Explore Now</button>
                     </div>
